# Sudoku-Generator-CPP

./: CMakeLists.txt  README.md  Sudoku.h  main.cpp
Commons/: Level.h  common.h
GUI/: FieldManager.cpp  FieldManager.h  QLineEditID.h  QStrictIntValidator.h  ThreadManager.cpp  ThreadManager.h  ThreadTrigger.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  stacksavedialog.cpp  stacksavedialog.ui
Generator/: GenSudoku.cpp  GenSudoku.h  LasVegasAlgo.h  StaticGenerator.h  SudokuGen.cpp  SudokuGen.h  SudokuProp.cpp  SudokuProp.h  SudokuSolver.cpp  SudokuSolver.h
Saver/: SaveHandler.cpp  SaveHandler.h  SaveIMG.h  SaveVector.cpp  StackSave.cpp  StackSave.h
Sudoku/: Sudoku.h
cmake/: QtCommon.cmake
res/: AppIcon.icns  SudokuGenIcon.psd
src/: CMakeLists.txt  CMakeLists_pack.txt
src/Commons/: Level.h
src/GUI/: FieldManager.h  ThreadManager.cpp  ThreadManager.h  ThreadTrigger.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  stacksavedialog.cpp  stacksavedialog.h
src/Generator/: SudokuGen.cpp  SudokuProp.h  SudokuSolver.cpp
src/Saver/: SaveHandler.cpp  SaveHandler.h  SaveIMG.h  SaveTXT.h  SaveVector.h  StackSave.cpp  StackSave.h
src/Sudoku/: Sudoku.h
